--- a/blant-monitor/src/main/resources/templates/login.html
+++ b/blant-monitor/src/main/resources/templates/login.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="UTF-8"/>
-    <title>Ace-Monitor登录</title>
+    <title>Blant-Monitor登录</title>
     <style>
         html,body{text-align:center;margin:0px auto;}
         form, div{margin: 5px;}
